- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.9.3
- 
    None
- 
    Reproduced on iOS10, iOS11.
- 
        
- 
        3e3c57188c868d2c3d434c2e3b876ac89b40ae2f
If you try to use a custom QuickControls style together with a Fallback Style for controls you didn't override, the Fallback Style is not set if the application is running on iOS.
The following lines are shown within the log output when running on an iOS device.
ERROR: unable to locate fallback style "Universal"
QQuickStyle::setFallbackStyle(): the fallback style must be the name of one of the built-in Qt Quick Controls 2 styles.
I created a minimal sample application to illustrate the bug. If this application is run on another plattform (I tried Windows, Ubuntu Linux, macOS and android), the FallbackStyle is set correctly, and the Application has a dark background, as expected.
If you run this application on an iOS device, it shows a white Background, and a style that resembles the "Default" style more.
Note: If you use "Universal" within the setStyle()-Function, the style is correct also on the iOS device.