Fix QQuickStyle::setFallbackStyle() in static builds

Use QQmlFile::urlToLocalFileOrQrc() instead of QUrl::toLocalFile()
to avoid assuming a local file path. In static builds, QML files are
in QRC.

Task-number: QTBUG-65016
Change-Id: Ide36e5269d8692620f352574c726fbd1997c0a77
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>